<resources>
    <string name="app_name">Microwave</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="popcorn">Popcorn</string>
    <string name="beverage">Beverage</string>
    <string name="potato">Potato</string>
    <string name="vegetable">Vegetable</string>
    <string name="my_plate">MyPlate</string>
    <string name="reheat">Reheat</string>
    <string name="defrost">Defrost \nWeight/Time</string>
    <string name="sensor_cooking">Sensor Cooking</string>
    <string name="express_cook">Express Cook</string>
    <string name="clock_display">Clock Display</string>
    <string name="cook">Cook</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="power_level">Power \nLevel</string>
    <string name="set_clock">Set \nClock</string>
    <string name="add_30_sec">Add \n30 Sec</string>
    <string name="timer_on_off">Timer \nOn/Off</string>
    <string name="cook_time">Cook \nTime</string>
    <string name="help">Help</string>
    <string name="cancel_off">Cancel \nOff</string>
    <string name="start_pause">Start \nPause</string>
    <string name="sound">Sound</string>

</resources>